--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">sample</string>
+    <string name="app_name">权限Demo</string>
+    <string name="request_permission">请求权限</string>
+    <string name="not_granted_permission">未被授权的权限</string>
+    <string name="forbid_permission">被禁止的权限</string>
 </resources>
